# linuxdeployqt5

./: CMakeLists.txt  Linux qt程序打包流程.txt
tools/linuxdeployqt/: main.cpp
